--- a/hammers/ssh/config.org
+++ b/hammers/ssh/config.org
@@ -7,15 +7,25 @@
 #+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
-*** VPN 设置
+*** X11 设置
     #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
       ForwardX11 yes
-      RequestTTY yes
-      Host vpn.seoul
-      HostName vps.kopinions.com
+      RequestTTY yes      
+    #+END_SRC
+*** VPN 设置
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
+      Host aws
+      HostName ec2.kopinions.com
       User ec2-user
       Port 22
-      IdentityFile ~/.config/ssh/keys/seoul.vpn.pem
+      IdentityFile ~/.config/ssh/keys/ec2.pem
+    #+END_SRC
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
+      Host aliyun
+      HostName ecs.kopinions.com
+      User ecs-user
+      Port 22
+      IdentityFile ~/.config/ssh/keys/ecs.pem
     #+END_SRC
 *** ubuntu parallels
     #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") exports code :eval never :comments link
