--- a/hammers/ssh/config.org
+++ b/hammers/ssh/config.org
@@ -9,8 +9,14 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** X11 设置
     #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
+      Host *
       ForwardX11 yes
       RequestTTY yes      
+    #+END_SRC
+*** SSH 连接保持
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
+      TCPKeepAlive yes
+      ServerAliveInterval 120      
     #+END_SRC
 *** VPN 设置
     #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
