feat: remove hammers to change input method

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -35,6 +35,7 @@
        brew 'coreutils' if OS.mac?
        brew 'binutils' if OS.mac?
        brew 'moreutils' if OS.mac?
+       brew 'findutils' if OS.mac?
      #+END_SRC
     
 **** 增强工具
